Added hardware parameters as parameters

--- a/PARAMETERS.yaml
+++ b/PARAMETERS.yaml
@@ -7,6 +7,12 @@ Imaging:
   TIMESPACING: 31.858      # in milliseconds
   OVERSAMPLING: 2
 
+# Hardware parameters
+Hardware:
+  G_sr: 195.0    # in mT/m/s
+  G_max: 40.0    # in mT/m
+  r_BW: 128.0e+3 # in Hz
+
 # Data formatting
 Formatting:
   tx: 0.0
