Added MPS orientation and location based on Paraview planning. Also added phantom to generate images

--- a/PARAMETERS.yaml
+++ b/PARAMETERS.yaml
@@ -1,7 +1,7 @@
 # Imaging parameters
 Imaging:
-  RES: [30, 30, 20]
-  FOV: [0.132, 0.11, 0.24] # in meters
+  RES: [66, 40, 113]
+  FOV: [0.132, 0.08, 0.226] # in meters
   T2star: 254.0            # in milliseconds
   VENC: [1.5, 2.0, 2.5]    # in meters per second
   TIMESPACING: 31.858      # in milliseconds
@@ -15,15 +15,14 @@ Hardware:
 
 # Imaging orientation (make sure about orthogonality)
 Formatting:
-  M: [1.0, 0.0, 0.0]
-  P: [0.0, 0.0, 1.0]
-  S: [0.0, 1.0, 0.0]
-
-# # Data formatting
-# Formatting:
-#   tx: 0.0
-#   ty: 0.0
-#   tz: -1.57079633 # pi/2
+  # M_ORI: [0.0, 1.0, 0.0]
+  # P_ORI: [1.0, 0.0, 0.0]
+  # S_ORI: [0.0, 0.0, 1.0]
+  # Data taken from Box paraview filter
+  theta_x: 0.0    # degrees
+  theta_y: 0.0    # degrees
+  theta_z: 90.0  # degrees
+  LOC: [-0.063242, 0.012783, -0.0898078]
 
 # EPI parameters
 EPI:
